--- a/ws/restaurant-client.html
+++ b/ws/restaurant-client.html
@@ -8,10 +8,15 @@
         const socket = io('http://localhost:3001');
         socket.on('connect', function () {
             console.log('WS Restaurant Connected');
+            socket.emit("orderReceivedByRestaurant", "received...");
         });
         socket.on('orderCreated', function (data) {
             console.log('got event - ', JSON.parse(data));
             socket.emit("orderReceivedByRestaurant", "received...");
+        });
+
+        socket.on('test', function (data) {
+            console.log('got test - ', data);
         });
         socket.on('exception', function (data) {
             console.log('event', data);
